--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,12 @@
 <nav class="navbar">
     <h1><a routerLink="/">E-COMM</a> </h1>
     <div class="input" *ngIf="menuType ==='default'">
-        <input type="text" placeholder="search" [(ngModel)]="inputValue" (blur)="searchProducts(inputValue)" />
+        <!-- <input type="text" placeholder="search" [(ngModel)]="inputValue" (blur)="searchProducts(inputValue)" /> -->
+        <input type="text" placeholder="search" (keyup)="searchProducts($event)" (blur)="hideSearch()" />
         <button>Search</button>
+        <ul class="searchedResults" *ngIf="searchedResults">
+            <li *ngFor="let name of searchedResults;let i =index;">{{name.name}}</li>
+        </ul>
     </div>
     <div [ngSwitch]="menuType">
         <ul *ngSwitchCase="'default'">
