--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -7,6 +7,7 @@
                 <th scope="col">Image</th>
                 <th scope="col">Name</th>
                 <th scope="col">Price</th>
+                <th scope="col">Color</th>
                 <th scope="col">Category</th>
                 <th scope="col">Description</th>
                 <th scope="col">Action</th>
@@ -20,6 +21,7 @@
                 </td>
                 <td>{{product.name}}</td>
                 <td>{{product.price}}</td>
+                <td>{{product.color}}</td>
                 <td>{{product.category}}</td>
                 <td>{{product.description}}</td>
                 <td>
