--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div class="row">
+<div>
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <div class="mainWrapper">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer></app-footer>
 </div>
