--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <ngb-carousel *ngIf="popularProductlist">
     <ng-template ngbSlide *ngFor="let product of popularProductlist">
         <div class="picsum-img-wrapper">
-            <img src="{{product.image}}" alt="Random first slide" />
+            <a routerLink="/product-details/{{product.id}}">
+                <img src="{{product.image}}" alt="Random first slide" />
+            </a>
         </div>
         <div class="carousel-caption">
             <h3>{{product.name}}</h3>
@@ -27,6 +29,8 @@
                     <div class="description">{{product.description}}</div>
                 </div>
                 <button class="mt-3 btn btn-secondary w-100">Add to cart</button>
+                <button routerLink="/product-details/{{product.id}}" class="mt-3 btn btn-dark w-100">View
+                    Details</button>
             </div>
         </div>
     </div>
