--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'node_modules/primeng/resources/primeng.min.css';
+@import 'node_modules/primeng/resources/themes/nova/theme.css';
+@import 'node_modules/primeicons/primeicons.css';
+
 body {
     font-family: sans-serif;
     background-color: #fff;
