--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,8 +28,25 @@
                     <div class="price">Rs - <strong>{{product.price}}/-</strong></div>
                     <div class="description">{{product.description}}</div>
                 </div>
-                <button class="mt-3 btn btn-secondary w-100">Add to cart</button>
-                <button routerLink="/product-details/{{product.id}}" class="mt-3 btn btn-dark w-100">View
+                <div class="d-flex justify-content-between align-items-center gap-1">
+                    <button class="mt-3 btn btn-secondary w-100" *ngIf="selectedProduct !== i && !product.disabled"
+                        (click)="addToCart(product, i)">
+                        Add to cart</button>
+                    <button class="mt-3 btn btn-danger w-100" *ngIf="selectedProduct === i || product.disabled"
+                        (click)="removeCartItem(product, i)">
+                        Remove to cart</button>
+
+
+                    <div class="w-50 d-flex  align-items-center mt-3">
+                        <button class="btn btn-dark" (click)="addItems('minus',i, product)">-</button>
+                        <input class="w-100 inputValue" type="text" name="customNum" #item *ngIf="selectedIndex !== i"
+                            value="1" style="height: 38px;" />
+                        <input class="w-100 inputValue" type="text" name="customNum" #item *ngIf="selectedIndex === i"
+                            [(ngModel)]="customNum" style="height: 38px;" />
+                        <button class="btn btn-dark" (click)="addItems('add', i, product)">+</button>
+                    </div>
+                </div>
+                <button routerLink="/product-details/{{product.id}}" class="mt-3 btn btn-outline-dark w-100">View
                     Details</button>
             </div>
         </div>
